--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 
 # Distribution specific files and dirs.
 build/
+!src/build/
 dist/
 *.egg-info
 
 # Python specific files and dirs.
 __pycache__/
+.mypy_cache/
 
 # IDE and environment related files and dirs
 .idle
