--- a/build.yaml
+++ b/build.yaml
@@ -2,7 +2,7 @@ project:
   name: chell
   entry_points: |
     [console_scripts]
-    chell=chell.cli.main:main
+    chell=chell.cli.main:chell_cli
 personnel:
   author: Keenan W. Wilkinson
   author_email: keenanwilkinson@outlook.com
@@ -11,6 +11,7 @@ description:
 build:
   version: 0.0.0
   packages:
-    - chell
+    - src
+    - src/chell
   py_modules:
-    - chell.cli.main
+    - src.chell.cli.main
